Ensure pip + boto are installed, so we can interact with AWS remotely

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -50,6 +50,10 @@
    - nmap
    - screen
    - vim
+   - python-pip
+
+- name: install boto
+  pip: name=boto
 
 - name: setup screenrc
   synchronize: src=screenrc dest=/etc/screenrc
