--- a/roles/pingbot/tasks/main.yml
+++ b/roles/pingbot/tasks/main.yml
@@ -3,8 +3,8 @@
       object=/pinger.zip
       dest=/var/cache/pinger.zip
       mode=get
-      aws_access_key=***REMOVED***
-      aws_secret_key=***REMOVED***
+      aws_access_key=aaaa
+      aws_secret_key=bbbb
 
 - name: unarchive latest pingbot release
   unarchive: src=/var/cache/pinger.tar.gz dest=/usr/local/bin mode=755 copy=no
